[project]
name = "ionis-mcp"
version = "1.0.0"
description = "MCP server for IONIS HF propagation analytics — 175M signatures from WSPR, RBN, Contest, DXpedition, and PSK Reporter"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Greg Beam, KI7MT"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://ionis-ai.com/"
Repository = "https://github.com/IONIS-AI/ionis-mcp"
Datasets = "https://sourceforge.net/p/ionis-ai"

[project.scripts]
ionis-mcp = "ionis_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ionis_mcp"]
